--- a/movie1.html
+++ b/movie1.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="assets/CSS/movies.css">
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+        <title>Volume 1</title>
+    </head>
+    <body>
+        <nav>
+            <a href="index.html">Home</a> 
+            <a href="movie1.html">Vol 1</a> 
+            <a href="movie2.html">Vol 2</a>
+            <a href="movie3.html">Vol 3</a>
+            <a href="quiz.html">Quiz</a>
+            <a href="about_us.html">About Us</a>
+        </nav>
+    </body>
+</html>
