--- a/movie1.html
+++ b/movie1.html
@@ -16,5 +16,12 @@
             <a href="quiz.html">Quiz</a>
             <a href="about_us.html">About Us</a>
         </nav>
+        <p>Guardians of the Galaxy is a 2014 superhero film, based on the Marvel Comics superhero team of the same name. It is the tenth film in the Marvel Cinematic Universe, and the fourth installment of Phase Two. The film was released on July 31, 2014, internationally </p>
+        <p>The film is written and directed by James Gunn. </p>
+        <div>imdb rating: 8/10 </div>
+        <br>
+        <h2>Synopsis</h2>
+        <p>An action-packed, epic space adventure, Marvel's "Guardians of the Galaxy," expands the Marvel Cinematic Universe into the cosmos, where brash adventurer Peter Quill finds himself the object of an unrelenting bounty hunt after stealing a mysterious orb coveted by Ronan, a powerful villain with ambitions that threaten the entire universe. To evade the ever-persistent Ronan, Quill is forced into an uneasy truce with a quartet of disparate misfits--Rocket, a gun-toting raccoon; Groot, a tree-like humanoid; the deadly and enigmatic Gamora; and the revenge-driven Drax the Destroyer. But when Quill discovers the true power of the orb and the menace it poses to the cosmos, he must do his best to rally his ragtag rivals for a last, desperate stand--with the galaxy's fate in the balance.</p>
+        
     </body>
 </html>
