--- a/movie2.html
+++ b/movie2.html
@@ -16,13 +16,23 @@
             <a href="quiz.html">Quiz</a>
             <a href="about_us.html">About Us</a>
         </nav>
-        <h1>Guardians of Galaxy Vol.2</h1>
-        <p>Guardians of the Galaxy Vol. 2 is a 2017 superhero fantasy adventure film, based on the Marvel Comics superhero team of the same name. The film is a sequel to Guardians of the Galaxy. It is the fifteenth film in the Marvel Cinematic Universe and the third installment of Phase Three. The film was released on April 25, 2017 internationally.</p>
-        <p>The film is written and directed by James Gunn. </p>
-        <div>imdb rating: 7.6/10 </div>
-        <br>
-        <h2>Synopsis</h2>
-        <p>Set to the backdrop of "Awesome Mixtape #2", Marvel's Guardians of the Galaxy Vol. 2 continues the team's adventures as they traverse the outer reaches of the cosmos. The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. Old foes become new allies and fan-favorite characters from the classic comics will come to our heroes' aid as the Marvel Cinematic Universe continues to expand</p>
-        
-    </body>
+        <div class="container">
+            <div class="mixtape">
+                <img id=tape src="assets/media/awesome_mix1.png" alt="Awesome Mix 1" width="230" height="150">
+                <audio id="tapeAudio" loop>
+                    <source src="assets/media/ComeAndGetYourLove.mp3" type="audio/mpeg">
+                    <source src="assets/media/ComeAndGetYourLove.ogg" type="audio/ogg">
+                </audio>
+            </div>
+             <div class="content">
+                <img src="assets/media/v2poster.jpg" alt="Movie Poster" width="150" height="200">
+                <h1>Guardians of Galaxy Vol.2</h1>
+                <p>Guardians of the Galaxy Vol. 2 is a 2017 superhero fantasy adventure film, based on the Marvel Comics superhero team of the same name. The film is a sequel to Guardians of the Galaxy. It is the fifteenth film in the Marvel Cinematic Universe and the third installment of Phase Three. The film was released on April 25, 2017 internationally.</p>
+                <p>The film is written and directed by James Gunn. </p>
+                <div>imdb rating: 7.6/10 </div>
+                <br>
+                <p>Set to the backdrop of "Awesome Mixtape #2", Marvel's Guardians of the Galaxy Vol. 2 continues the team's adventures as they traverse the outer reaches of the cosmos. The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. Old foes become new allies and fan-favorite characters from the classic comics will come to our heroes' aid as the Marvel Cinematic Universe continues to expand</p>
+             </div>
+        </div>
+        </body>
 </html>
