--- a/movie3.html
+++ b/movie3.html
@@ -16,13 +16,24 @@
             <a href="quiz.html">Quiz</a>
             <a href="about_us.html">About Us</a>
         </nav>
-        <h1>Guardians of Galaxy Vol.3</h1>
-        <p>Guardians of the Galaxy Vol. 3 is a 2023 superhero film, based on the Marvel Comics superhero team of the same name. The film is a sequel to Guardians of the Galaxy, Guardians of the Galaxy Vol. 2, Avengers: Endgame, and The Guardians of the Galaxy Holiday Special. It is the thirty-second film in the Marvel Cinematic Universe and the second installment of Phase Five. The film was released on May 5, 2023.</p>
-        <p>The film is written and directed by James Gunn. </p>
-        <div>imdb rating: 7.9/10 </div>
-        <br>
-        <h2>Synopsis</h2>
-        <p>In Marvel Studios' Guardians of the Galaxy Vol. 3 our beloved band of misfits are settling into life on Knowhere. But it isn't long before their lives are upended by the echoes of Rocket's turbulent past. Peter Quill, still reeling from the loss of Gamora, must rally his team around him on a dangerous mission to save Rocket's life—a mission that, if not completed successfully, could quite possibly lead to the end of the Guardians as we know them.</p>
-        
+        <div class="container">
+            <div class="mixtape">
+                <img id=tape src="assets/media/awesome_mix1.png" alt="Awesome Mix 1" width="230" height="150">
+                <audio id="tapeAudio" loop>
+                    <source src="assets/media/ComeAndGetYourLove.mp3" type="audio/mpeg">
+                    <source src="assets/media/ComeAndGetYourLove.ogg" type="audio/ogg">
+                </audio>
+            </div>
+             <div class="content">
+                <img src="assets/media/v3poster.jpg" alt="Movie Poster" width="150" height="200">
+                <h1>Guardians of Galaxy Vol.3</h1>
+                <p>Guardians of the Galaxy Vol. 3 is a 2023 superhero film, based on the Marvel Comics superhero team of the same name. The film is a sequel to Guardians of the Galaxy, Guardians of the Galaxy Vol. 2, Avengers: Endgame, and The Guardians of the Galaxy Holiday Special. It is the thirty-second film in the Marvel Cinematic Universe and the second installment of Phase Five. The film was released on May 5, 2023.</p>
+                <p>The film is written and directed by James Gunn. </p>
+                <div>imdb rating: 7.9/10 </div>
+                <br>
+                <h2>Synopsis</h2>
+                <p>In Marvel Studios' Guardians of the Galaxy Vol. 3 our beloved band of misfits are settling into life on Knowhere. But it isn't long before their lives are upended by the echoes of Rocket's turbulent past. Peter Quill, still reeling from the loss of Gamora, must rally his team around him on a dangerous mission to save Rocket's life—a mission that, if not completed successfully, could quite possibly lead to the end of the Guardians as we know them.</p>
+            </div>
+        </div>
     </body>
 </html>
