--- a/characters.html
+++ b/characters.html
@@ -17,5 +17,7 @@
             <a href="quiz.html">Quiz</a>
             <a href="about_us.html">About Us</a>
         </nav>
+        <img src="quill.png" alt="quilt">
     </body>
 </html>
+
