--- a/characters.html
+++ b/characters.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/CSS/movies.css">
+        <link rel="stylesheet" href="assets/CSS/characters.css">
         <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-        <title>aracters</title>
+        <title>Characters</title>
     </head>
     <body>
         <nav>
@@ -17,7 +17,33 @@
             <a href="quiz.html">Quiz</a>
             <a href="about_us.html">About Us</a>
         </nav>
-        <img src="quill.png" alt="quilt">
+        <div class="characters">
+            <div class="charactercard">
+                <img src="assets/media/quill.png" alt="quill">
+                <p class="charactername">Star-Lord (Peter Quill)</p>
+            </div>
+            <div class="charactercard">
+                <img src="assets/media/rocket.png" alt="rocket">
+                <p class="charactername">Rocket</p>
+            </div>
+            <div class="charactercard">
+                <img src="assets/media/drax.png" alt="drax">
+                <p class="charactername">Drax</p>
+            </div>
+            <div class="charactercard">
+                <img src="assets/media/gamora.png" alt="gamora">
+                <p class="charactername">Gamora</p>
+            </div>
+            <div class="charactercard">
+                <img src="assets/media/groot.jpg" alt="groot">
+                <p class="charactername">Groot</p>
+            </div>
+            <div class="charactercard">
+                <img src="assets/media/thanos.png" alt="thanos">
+                <p class="charactername">Thanos</p>
+            </div>
+        </div>
     </body>
 </html>
+
 
