--- a/about_us.html
+++ b/about_us.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<style>
+  .about-section {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .about-section img {
+    width: 200px;
+    border-radius: 50%;
+    margin-right: 20px;
+  }
+
+  .description {
+    max-width: 500px;
+    font-size: 18px;
+  }
+</style>
+</head>
+
+<body>
+
+<h1>About Us</h1>
+
+<!-- First image + text -->
+<div class="about-section">
+  <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\aboutusmads.jpeg" alt="aboutusmads">
+  <div class="description">
+    <p>This is the description for the first image. You can write anything you want here.</p>
+  </div>
+</div>
+
+<!-- Second image + text -->
+<div class="about-section">
+  <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\grishmaaboutus.jpeg" alt="grishmaaboutus">
+  <div class="description">
+    <p>This is another description for the second image.</p>
+  </div>
+</div>
+
+<!-- Add more sections the same way -->
+</body>
+</html>
