Update about_us.html again

--- a/about_us.html
+++ b/about_us.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="assets/CSS/characters.css">
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+        
+    </head>
+
+    <nav>
+            <a href="index.html">Home</a> 
+            <a href="movie1.html">Vol 1</a> 
+            <a href="movie2.html">Vol 2</a>
+            <a href="movie3.html">Vol 3</a>
+            <a href="characters.html">Characters</a>
+            <a href="quiz.html">Quiz</a>
+            <a href="about_us.html">About Us</a>
+        </nav>
+    
 
 <style>
   .about-section {
@@ -11,7 +27,8 @@
   }
 
   .about-section img {
-    width: 200px;
+    width: 120px;
+    height: 120px;;
     border-radius: 50%;
     margin-right: 20px;
   }
@@ -43,6 +60,23 @@
   </div>
 </div>
 
+<div class="about-section">
+  <img src="C:\path\to\image3.jpeg" alt="img3">
+  <div class="description">
+    <p>Description for the third image.</p>
+  </div>
+</div>
+
+<div class="about-section">
+  <img src="C:\path\to\image4.jpeg" alt="img4">
+  <div class="description">
+    <p>Description for the fourth image.</p>
+  </div>
+</div>
+
 
 </body>
 </html>
+
+
+
