--- a/about_us.html
+++ b/about_us.html
@@ -1,79 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/CSS/characters.css">
-        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-        
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/CSS/characters.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 
-    <nav>
-            <a href="index.html">Home</a> 
-            <a href="movie1.html">Vol 1</a> 
-            <a href="movie2.html">Vol 2</a>
-            <a href="movie3.html">Vol 3</a>
-            <a href="characters.html">Characters</a>
-            <a href="quiz.html">Quiz</a>
-            <a href="about_us.html">About Us</a>
-        </nav>
-    
+    <style>
+        body {
+            padding: 30px; /* space from the page border */
+        }
 
-<style>
-  .about-section {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
+        .about-section {
+            display: flex;
+            align-items: center;
+            margin-bottom: 30px; /* more spacing between sections */
+            gap: 20px; /* space between image and text box */
+        }
 
-  .about-section img {
-    width: 120px;
-    height: 120px;;
-    border-radius: 50%;
-    margin-right: 20px;
-  }
+        .about-section img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 3px solid white; /* makes the image stand out */
+        }
 
-  .description {
-    max-width: 500px;
-    font-size: 18px;
-  }
-</style>
+        .description-box {
+            background-color: rgba(255, 255, 255, 0.8); /* light background so text is readable */
+            padding: 15px;
+            border-radius: 10px;
+            max-width: 500px;
+            backdrop-filter: blur(3px); /* optional aesthetic blur */
+            font-size: 18px;
+            color: black;
+        }
+    </style>
 </head>
 
 <body>
 
+<nav>
+    <a href="index.html">Home</a> 
+    <a href="movie1.html">Vol 1</a> 
+    <a href="movie2.html">Vol 2</a>
+    <a href="movie3.html">Vol 3</a>
+    <a href="characters.html">Characters</a>
+    <a href="quiz.html">Quiz</a>
+    <a href="about_us.html">About Us</a>
+</nav>
+
 <h1>About Us</h1>
 
-<!-- First image + text -->
+<!-- Image 1 -->
 <div class="about-section">
-  <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\aboutusmads.jpeg" alt="aboutusmads">
-  <div class="description">
-    <p>This is the description for the first image. You can write anything you want here.</p>
-  </div>
+    <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\aboutusmads.jpeg" alt="aboutusmads">
+    <div class="description-box">
+        <p>This is the description for the first image. You can write anything you want here.</p>
+    </div>
 </div>
 
-<!-- Second image + text -->
+<!-- Image 2 -->
 <div class="about-section">
-  <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\grishmaaboutus.jpeg" alt="grishmaaboutus">
-  <div class="description">
-    <p>This is another description for the second image.</p>
-  </div>
+    <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\grishmaaboutus.jpeg" alt="grishmaaboutus">
+    <div class="description-box">
+        <p>This is another description for the second image.</p>
+    </div>
 </div>
 
+<!-- Image 3 -->
 <div class="about-section">
-  <img src="C:\path\to\image3.jpeg" alt="img3">
-  <div class="description">
-    <p>Description for the third image.</p>
-  </div>
+    <img src="C:\path\to\image3.jpeg" alt="img3">
+    <div class="description-box">
+        <p>Description for the third image.</p>
+    </div>
 </div>
 
+<!-- Image 4 -->
 <div class="about-section">
-  <img src="C:\path\to\image4.jpeg" alt="img4">
-  <div class="description">
-    <p>Description for the fourth image.</p>
-  </div>
+    <img src="C:\path\to\image4.jpeg" alt="img4">
+    <div class="description-box">
+        <p>Description for the fourth image.</p>
+    </div>
 </div>
-
 
 </body>
 </html>
