--- a/movie2.html
+++ b/movie2.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/CSS/movies.css">
         <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-        <title>Volume 1</title>
+        <title>Volume 2</title>
     </head>
     <body>
         <nav>
@@ -14,25 +14,58 @@
             <a href="movie2.html">Vol 2</a>
             <a href="movie3.html">Vol 3</a>
             <a href="quiz.html">Quiz</a>
+            <a href="characters.html">Characters</a>
             <a href="about_us.html">About Us</a>
         </nav>
         <div class="container">
             <div class="mixtape">
-                <img id=tape src="assets/media/awesome_mix1.png" alt="Awesome Mix 1" width="230" height="150">
+                <img id=tape src="assets/media/awesome_mix2.png" alt="Awesome Mix 1" width="230" height="150">
                 <audio id="tapeAudio" loop>
-                    <source src="assets/media/ComeAndGetYourLove.mp3" type="audio/mpeg">
-                    <source src="assets/media/ComeAndGetYourLove.ogg" type="audio/ogg">
+                    <source src="assets/media/ComeALittleBitCloser.mp3" type="audio/mpeg">
+                    <source src="assets/media/ComeALittleBitCloser.mp3" type="audio/ogg">
                 </audio>
             </div>
-             <div class="content">
+            <div class="content">
                 <img src="assets/media/v2poster.jpg" alt="Movie Poster" width="150" height="200">
                 <h1>Guardians of Galaxy Vol.2</h1>
                 <p>Guardians of the Galaxy Vol. 2 is a 2017 superhero fantasy adventure film, based on the Marvel Comics superhero team of the same name. The film is a sequel to Guardians of the Galaxy. It is the fifteenth film in the Marvel Cinematic Universe and the third installment of Phase Three. The film was released on April 25, 2017 internationally.</p>
-                <p>The film is written and directed by James Gunn. </p>
-                <div>imdb rating: 7.6/10 </div>
-                <br>
                 <p>Set to the backdrop of "Awesome Mixtape #2", Marvel's Guardians of the Galaxy Vol. 2 continues the team's adventures as they traverse the outer reaches of the cosmos. The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. Old foes become new allies and fan-favorite characters from the classic comics will come to our heroes' aid as the Marvel Cinematic Universe continues to expand</p>
-             </div>
+                <div class="scenes">
+                    <div>
+                        <h2>Quotes</h2>
+                        <img src="assets/media/vol2quote1.gif" alt="Quote from the movie" width="370" height="180">
+                        <img src="assets/media/vol2quote2.gif" alt="Quote from the movie" width="370" height="170">
+                    </div>
+                    <div>
+                        <h2>Trailer</h2>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/wUn05hdkhjM?si=sPoHd6bDiKgJKmdn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
-        </body>
+        <footer>
+            <p>&copy Guide to the Gaurdains of the Galaxy</p>
+            <p>
+                <a href="mailto:aj9637@rit.edu">Amal Junaid</a> |
+                <a href="mailto:gb2109@rit.edu">Grishma Bhandari</a> |
+                <a href="mailto:rmn1307@rit.edu">Reema Naheem</a> |
+                <a href="mailto:ms4830@rit.edu">Madheeha Sameeen</a>
+            </p>
+        </footer> 
+        <script>
+            const img = document.getElementById("tape");
+            const audio = document.getElementById("tapeAudio");
+
+            img.addEventListener("click", () => {
+                if (audio.paused) {
+                    audio.play();
+                    img.style.opacity = "1";
+                } else {
+                    audio.pause();
+                    audio.currentTime = 0;
+                    img.style.opacity = "0.5";
+                }
+            });
+        </script>
+    </body>
 </html>
