--- a/movie1.html
+++ b/movie1.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="mixtape">
                 <img id=tape src="assets/media/awesome_mix1.png" alt="Awesome Mix 1" width="230" height="150">
-                <audio id="tapeAudio" loop>
+                <audio id="tapeAudio" controls loop>
                     <source src="assets/media/ComeAndGetYourLove.mp3" type="audio/mpeg">
                     <source src="assets/media/ComeAndGetYourLove.ogg" type="audio/ogg">
                 </audio>
@@ -61,10 +61,12 @@
                 if (audio.paused) {
                     audio.play();
                     img.style.opacity = "1";
+                    audio.style.opacity = "1";
                 } else {
                     audio.pause();
                     audio.currentTime = 0;
                     img.style.opacity = "0.5";
+                    audio.style.opacity = "0.5";
                 }
             });
         </script>
