--- a/characters.html
+++ b/characters.html
@@ -3,19 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/CSS/characters.css">
+        <link rel="stylesheet" href="assets/CSS/movies.css">
         <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
         <title>Characters</title>
     </head>
     <body>
         <nav>
-            <a href="index.html">Home</a> 
-            <a href="movie1.html">Vol 1</a> 
-            <a href="movie2.html">Vol 2</a>
-            <a href="movie3.html">Vol 3</a>
-            <a href="characters.html">Characters</a>
-            <a href="quiz.html">Quiz</a>
-            <a href="about_us.html">About Us</a>
+            <input type="checkbox" id="menu-toggle">
+
+            <label for="menu-toggle" class="menu-icon">
+                <div class="hamburger">&#9776;</div>
+            </label>
+            
+            <div class="nav-links">
+                <a href="index.html">Home</a> 
+                <a href="movie1.html">Vol 1</a> 
+                <a href="movie2.html">Vol 2</a>
+                <a href="movie3.html">Vol 3</a>
+                <a href="characters.html">Characters</a>
+                <a href="quiz.html">Quiz</a>
+                <a href="about_us.html">About Us</a>
+            </div>
         </nav>
         <div class="characters">
             <div class="charactercard">
@@ -35,7 +43,7 @@
                 <p class="charactername">Gamora</p>
             </div>
             <div class="charactercard">
-                <img src="assets/media/groot.jpg" alt="groot">
+                <img src="assets/media/groot.png" alt="groot">
                 <p class="charactername">Groot</p>
             </div>
             <div class="charactercard">
@@ -43,6 +51,15 @@
                 <p class="charactername">Thanos</p>
             </div>
         </div>
+        <footer>
+            <p>&copy Guide to the Gaurdains of the Galaxy</p>
+            <p>
+                <a href="mailto:aj9637@rit.edu">Amal Junaid</a> |
+                <a href="mailto:gb2109@rit.edu">Grishma Bhandari</a> |
+                <a href="mailto:rmn1307@rit.edu">Reema Naheem</a> |
+                <a href="mailto:ms4830@rit.edu">Madheeha Sameeen</a>
+            </p>
+        </footer>
     </body>
 </html>
 
