Update characters.html description if characters

--- a/characters.html
+++ b/characters.html
@@ -28,27 +28,27 @@
         <div class="characters">
             <div class="charactercard">
                 <img src="assets/media/quill.png" alt="quill">
-                <p class="charactername">Star-Lord (Peter Quill)</p>
+                <p class="charactername">Star-Lord (Peter Quill) - Dances to end a world war </p>
             </div>
             <div class="charactercard">
                 <img src="assets/media/rocket.png" alt="rocket">
-                <p class="charactername">Rocket</p>
+                <p class="charactername">Rocket-The smart one</p>
             </div>
             <div class="charactercard">
                 <img src="assets/media/drax.png" alt="drax">
-                <p class="charactername">Drax</p>
+                <p class="charactername">Drax- The dumb one (but also a great dad :) ) </p>
             </div>
             <div class="charactercard">
                 <img src="assets/media/gamora.png" alt="gamora">
-                <p class="charactername">Gamora</p>
+                <p class="charactername">Gamora- Shouts a lot </p>
             </div>
             <div class="charactercard">
                 <img src="assets/media/groot.png" alt="groot">
-                <p class="charactername">Groot</p>
+                <p class="charactername">Groot- The tree of the group (literally )</p>
             </div>
             <div class="charactercard">
                 <img src="assets/media/thanos.png" alt="thanos">
-                <p class="charactername">Thanos</p>
+                <p class="charactername">Thanos - The biggest idiot in the universe :( </p>
             </div>
         </div>
         <footer>
@@ -62,5 +62,6 @@
         </footer>
     </body>
 </html>
+
 
 
