Update index.html first time

--- a/index.html
+++ b/index.html
@@ -1,8 +1,83 @@
 <!DOCTYPE html>
-<htm lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gaurdian's of the Galaxy</title>
-    </head>
-</htm>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guide to the Guardians of the Galaxy</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=VT323&display=swap" rel="stylesheet">
+</head>
+<body>
+
+    <div class="background-starfield"></div>
+
+    <header class="main-header">
+        <nav class="navbar">
+            <div class="logo">
+                <img src="logo.jpeg" alt="Guardians HQ Logo">
+                <span>GUARDIANS HQ</span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#" class="nav-link home-link">HOME</a></li>
+                <li><a href="#" class="nav-link vol1-link">VOL. 1</a></li>
+                <li><a href="#" class="nav-link vol2-link">VOL. 2</a></li>
+                <li><a href="#" class="nav-link vol3-link">VOL. 3</a></li>
+                <li><a href="#" class="nav-link about-link">ABOUT</a></li>
+                <li><a href="#" class="nav-link quiz-link">QUIZ</a></li>
+            </ul>
+            </nav>
+    </header>
+
+    <main>
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1>GUIDE TO THE GUARDIANS OF THE GALAXY</h1>
+                <p>Your ultimate source for cosmic adventures, alien antics, and awesome mixtapes.</p>
+                <a href="#" class="explore-button">EXPLORE</a>
+            </div>
+        </section>
+
+        <section class="movie-trilogy-section">
+            <h2 class="section-title">THE SAGAS BEGIN</h2>
+            <div class="movie-cards-container">
+                <a href="vol1.html" class="movie-card vol1">
+                    <div class="card-overlay">
+                        <h3>GUARDIANS OF THE GALAXY VOL. 1</h3>
+                        <span class="view-details">VIEW DETAILS</span>
+                    </div>
+                </a>
+                <a href="vol2.html" class="movie-card vol2">
+                    <div class="card-overlay">
+                        <h3>GUARDIANS OF THE GALAXY VOL. 2</h3>
+                        <span class="view-details">VIEW DETAILS</span>
+                    </div>
+                </a>
+                <a href="vol3.html" class="movie-card vol3">
+                    <div class="card-overlay">
+                        <h3>GUARDIANS OF THE GALAXY VOL. 3</h3>
+                        <span class="view-details">VIEW DETAILS</span>
+                    </div>
+                </a>
+            </div>
+        </section>
+
+        <div class="orb-scanner-divider"></div>
+
+    </main>
+
+    <footer class="main-footer">
+        <div class="footer-links">
+            <a href="#">About Us</a>
+        </div>
+        <div class="social-icons">
+            <a href="#"><alt="Instagram"></a>
+        </div>
+        <p class="disclaimer">
+            Guardians HQ
+        </p>
+        <p class="groot-tag">I am Groot.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
