--- a/about_us.html
+++ b/about_us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/CSS/characters.css">
+    <link rel="stylesheet" href="assets/CSS/movies.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 
     <style>
@@ -11,7 +11,7 @@
             padding: 30px; /* space from the page border */
         }
 
-         h2 {
+        h2 {
         color: white; 
         font-size: 40px;
          }
@@ -140,7 +140,7 @@
 
 <!-- Image 1 -->
 <div class="about-section">
-    <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\aboutusmads.jpeg" alt="aboutusmads">
+    <img src="assets\media\aboutusmads.jpeg" alt="aboutusmads">
     <div class="description-box">
         <p>Name : Madheeha sameen</p>
         <p>Contact: 0562440299</p>
@@ -150,7 +150,7 @@
 
 <!-- Image 2 -->
 <div class="about-section">
-    <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\grishmaaboutus.jpeg" alt="grishmaaboutus">
+    <img src="assets\media\grishmaaboutus.jpeg" alt="grishmaaboutus">
     <div class="description-box">
         <p>Name : Grishma Bhandari</p>
          <p>Contact: 0561320298</p>
@@ -164,7 +164,7 @@
 
 <!-- Image 3 -->
 <div class="about-section">
-    <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\amalaboutus.png" alt="amalaboutus">
+    <img src="assets\media\amalaboutus.png" alt="amalaboutus">
     <div class="description-box">
         <p>Name : Amal junaid</p>
         <p>Contact: 0508059536 </p>
@@ -174,7 +174,7 @@
 
 <!-- Image 4 -->
 <div class="about-section">
-    <img src="C:\Users\madhe\Downloads\comm 142\ISTE140_Project2_Team3-main\ISTE140_Project2_Team3-main\assets\media\reemaaboutus.jpg" alt="reemaaboutus">
+    <img src="assets\media\reemaaboutus.jpg" alt="reemaaboutus">
     <div class="description-box">
         
         <p>Name : reema mariyam</p>
