--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide to the Guardians of the Galaxy</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +14,7 @@
     <header class="main-header">
         <nav class="navbar">
             <div class="logo">
-                <img src="logo.jpeg" alt="Guardians HQ Logo">
+                <img src="assets/logo.jpeg" alt="Guardians HQ Logo">
                 <span>GUARDIANS HQ</span>
             </div>
             <ul class="nav-links">
@@ -77,7 +77,5 @@
         </p>
         <p class="groot-tag">I am Groot.</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
