minor changes to audio tag

--- a/movie2.html
+++ b/movie2.html
@@ -30,6 +30,7 @@
                 <audio id="tapeAudio" controls loop>
                     <source src="assets/media/ComeALittleBitCloser.mp3" type="audio/mpeg">
                     <source src="assets/media/ComeALittleBitCloser.mp3" type="audio/ogg">
+                    Your browser does not support audio element
                 </audio>
             </div>
             <div class="content">
