--- a/movie1.html
+++ b/movie1.html
@@ -31,6 +31,7 @@
                 <audio id="tapeAudio" controls loop>
                     <source src="assets/media/ComeAndGetYourLove.mp3" type="audio/mpeg">
                     <source src="assets/media/ComeAndGetYourLove.ogg" type="audio/ogg">
+                    Your browser does not support audio element
                 </audio>
             </div>
             <div class="content">
