--- a/movie1.html
+++ b/movie1.html
@@ -47,7 +47,10 @@
                     </div>
                     <div>
                         <h2>Trailer</h2>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/HuTtWqD8Ovs?si=NBcW31ZpSToJESEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/HuTtWqD8Ovs?si=NBcW31ZpSToJESEA" 
+                        title="YouTube video player" frameborder="0" 
+                        allow="picture-in-picture";  
+                        allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
