--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li><a href="movie2.html" class="nav-link vol2-link">VOL. 2</a></li>
                 <li><a href="movie3.html" class="nav-link vol3-link">VOL. 3</a></li>
                 <li><a href="about_us.html" class="nav-link about-link">ABOUT</a></li>
+                <li><a href="references.html" class="nav-link home-link">References</a></li>
             </ul>
 
         </nav>
