--- a/movie1.html
+++ b/movie1.html
@@ -22,6 +22,7 @@
                 <a href="movie3.html">Vol 3</a>
                 <a href="characters.html">Characters</a>
                 <a href="about_us.html">About Us</a>
+                <a href="references.html">References</a>
             </div>
         </nav>
         
