one more line to ref page

--- a/references.html
+++ b/references.html
@@ -47,6 +47,7 @@
                 <li><a href="https://youtu.be/ZuWkVqum6a8?si=tYuVQ5pPxg3AuJLV">Awesome Mix 2: Come a Little bit Closer by Jay and the Americans</a></li>
                 <li><a href="https://youtu.be/EZ7inhwScSQ?si=wNFjHQS_15A7NEyg">Awesome Mix 3: Crazy on you by Heart</a></li>
             </ul>
+            <p>Additionally, we took inspiration for galaxy backgrounds and colors from Pinterest.</p>
         </div>
         <footer>
             <p>&copy Guide to the Gaurdains of the Galaxy</p>
