fixed copyright sign

--- a/references.html
+++ b/references.html
@@ -50,7 +50,7 @@
             <p>Additionally, we took inspiration for galaxy backgrounds and colors from Pinterest.</p>
         </div>
         <footer>
-            <p>&copy Guide to the Gaurdains of the Galaxy</p>
+            <p>&copy; Guide to the Gaurdains of the Galaxy</p>
             <p>
                 <a href="mailto:aj9637@rit.edu">Amal Junaid</a> |
                 <a href="mailto:gb2109@rit.edu">Grishma Bhandari</a> |
