--- a/about_us.html
+++ b/about_us.html
@@ -124,7 +124,7 @@
       </form>
     </div>
     <footer>
-              <p>&copy Guide to the Gaurdains of the Galaxy</p>
+      <p>&copy; Guide to the Gaurdains of the Galaxy</p>
       <p>
           <a href="mailto:aj9637@rit.edu">Amal Junaid</a> |
           <a href="mailto:gb2109@rit.edu">Grishma Bhandari</a> |
