--- a/movie1.html
+++ b/movie1.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <footer>
-            <p>&copy Guide to the Gaurdains of the Galaxy</p>
+            <p>&copy; Guide to the Gaurdains of the Galaxy</p>
             <p>
                 <a href="mailto:aj9637@rit.edu">Amal Junaid</a> |
                 <a href="mailto:gb2109@rit.edu">Grishma Bhandari</a> |
