added some comments

--- a/about_us.html
+++ b/about_us.html
@@ -10,13 +10,14 @@
   <body>
 
     <nav>
+        <!-- HAMBURGER CHECKBOX -->
         <input type="checkbox" id="menu-toggle">
-
-          <label for="menu-toggle" class="menu-icon">
-            <div class="hamburger">&#9776;</div>
-          </label>
-
-          <div class="nav-links">
+        <!-- HAMBURGER BUTTON -->
+        <label for="menu-toggle" class="menu-icon">
+          <div class="hamburger">&#9776;</div>
+        </label>
+          <!-- NAVIGATION LINKS -->
+        <div class="nav-links">
           <a href="index.html">Home</a> 
           <a href="movie1.html">Vol 1</a> 
           <a href="movie2.html">Vol 2</a>
