--- a/characters.html
+++ b/characters.html
@@ -9,12 +9,13 @@
     </head>
     <body>
         <nav>
+            <!-- HAMBURGER CHECKBOX -->
             <input type="checkbox" id="menu-toggle">
-
+            <!-- HAMBURGER BUTTON -->
             <label for="menu-toggle" class="menu-icon">
                 <div class="hamburger">&#9776;</div>
             </label>
-            
+            <!-- NAVIGATION LINKS -->
             <div class="nav-links">
                 <a href="index.html">Home</a> 
                 <a href="movie1.html">Vol 1</a> 
