--- a/about_us.html
+++ b/about_us.html
@@ -24,6 +24,7 @@
           <a href="movie3.html">Vol 3</a>
           <a href="characters.html">Characters</a>
           <a href="about_us.html">About Us</a>
+          <a href="references.html">References</a>
         </div>
     </nav>
 
